--- a/src/pages/usercenter/usercenter.less
+++ b/src/pages/usercenter/usercenter.less
@@ -1,26 +1,52 @@
 .gridshow {
   display: grid;
-  grid-template-rows: 128px 180px 180px;
+  grid-template-rows: 250px 180px;
   grid-template-columns: auto auto auto auto;
-  gap: 20px;
+  gap: 100px;
   padding: 10px;
   align-items: center;
 }
 
 .username {
-  grid-column: 3/5;
   text-align: left;
+  margin-left: 100px;
   font-size: 48px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+.line{
+  padding: 0px;
+  border-style: solid;
+  width: 70%;
+  border-color: black;
+  border-width: 1px;
+}
+
+.school{
+  color: gray;
+  font-size: 32px;
+}
+
 .avatar {
-  grid-column: 1/3;
-  grid-row: 1/2;
   border-radius: 50%;
   max-width: 128px;
   max-height: 128px;
-  margin: 0 auto;
+  margin-left: 30px;
+}
+
+.container0 {
+  margin-top: 10px;
+  display: grid;
+  grid-template-rows: 150px;
+  grid-template-columns: 130px auto;
+  width: 100%;
+  grid-row: 1/2;
+  grid-column: 1/5;
+  border-style: none;
+  border-radius: 20px;
+  padding: 50px 0;
+  background-image: linear-gradient(to bottom right, #fcffe6, #feffe6);
+  align-items: center;
 }
 
 
@@ -30,9 +56,22 @@
   max-height: 64px;
 }
 
-.container1{
-    font-size: 28px;
-    text-align: center;
-    background-color: white;
-    padding: 32px 0;
+.container1 {
+  display: grid;
+  grid-template-rows: 120px 120px;
+  grid-template-columns: auto auto auto auto;
+  grid-column: 1/5;
+  border-radius: 20px;
+  gap: 40px;
+  width: 100%;
+  font-size: 28px;
+  text-align: center;
+  background-color: white;
+  padding: 32px 0;
+}
+
+
+.bg {
+  height: 1100px;
+  background-image: linear-gradient(to bottom right, #52c41a, rgb(62, 227, 189), #bae637);
 }
