--- a/src/pages/advice/advice.less
+++ b/src/pages/advice/advice.less
@@ -20,3 +20,25 @@
   width: 50%;
   margin-top: 30px;
 }
+
+.line{
+  padding: 0px;
+  border-style: solid;
+  margin-left: 30px;
+  width: 15%;
+  border-color: #389e0d;
+  border-width: 1px;
+}
+
+.container0{
+  width: 90%;
+  background-color: #d9f7be;
+  padding: 50px 0;
+  margin: 0 auto;
+}
+
+.title{
+  font-size: 48px;
+  margin-left: 30px;
+  margin-bottom: 20px;
+}
