--- a/src/pages/addressedit/addressedit.less
+++ b/src/pages/addressedit/addressedit.less
@@ -6,21 +6,20 @@
 }
 
 .card {
-  display: grid;
   background-color: white;
-  grid-template-columns: 150px auto;
-  grid-template-rows: 220px;
   border-radius: 20px;
   margin: 10px 10px;
-  padding-bottom: 20px;
+  padding: 50px 0;
 }
 
-.avatar {
-  background-color: #1890ff;
-  grid-row: 1/2;
-  grid-column: 1/2;
-  align-self: center;
-  justify-self: center;
+.list {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.detail {
+  width: 80%;
+  margin: 50px auto;
 }
 
 .address {
@@ -34,43 +33,12 @@
   width: 80%;
 }
 
-.name {
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  margin-top: 9%;
-  width: 90%;
-  font-weight: bold;
-}
-
-.phone {
-  font-size: small;
-  color: gray;
-  font-weight: 500;
-}
-
-.edit {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  float: right;
-  margin-right: 50px;
-}
-
-.btncontainer {
-  float: right;
-  margin-right: 20px;
-  display: grid;
-  gap: 20px;
-  grid-template-rows: 50px;
-  grid-template-columns: auto auto;
-  justify-items: right;
-}
-
 .btn {
   margin-top: 40px;
-  background-color: #40a9ff;
-  border-color: #40a9ff;
+  width: 75%;
+}
+
+.line {
+  margin-bottom: 40px;
+  margin-top: 30px;
 }
