--- a/src/pages/allorder/allorder.less
+++ b/src/pages/allorder/allorder.less
@@ -1,8 +1,10 @@
 .bg {
   min-height: 1300px;
-  background-image: linear-gradient(to bottom right, #52c41a, rgb(62, 227, 189), #bae637);
+  // background-image: linear-gradient(to bottom right, #52c41a, rgb(62, 227, 189), #bae637);
   padding-top: 10px;
   padding-bottom: 20px;
+  background-image: url(https://labeler.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
+  background-repeat: repeat-y;
 }
 
 .card {
