--- a/src/pages/usercenter/usercenter.less
+++ b/src/pages/usercenter/usercenter.less
@@ -73,5 +73,6 @@
 
 .bg {
   height: 1100px;
-  background-image: linear-gradient(to bottom right, #52c41a, rgb(62, 227, 189), #bae637);
+  // background-image: linear-gradient(to bottom right, #52c41a, rgb(62, 227, 189), #bae637);
+  background-image: url(https://labeler.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
 }
