--- a/src/pages/userinfo/userinfo.less
+++ b/src/pages/userinfo/userinfo.less
@@ -1,3 +1,12 @@
+.bg {
+  min-height: 1300px;
+  // background-image: linear-gradient(to bottom right, #52c41a, rgb(62, 227, 189), #bae637);
+  padding-top: 10px;
+  padding-bottom: 20px;
+  background-image: url(https://labeler.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
+  background-repeat: repeat-y;
+}
+
 .line {
   padding: 0px;
   border-style: solid;
@@ -9,7 +18,7 @@
 
 .container0 {
   width: 90%;
-  background-color: #d9f7be;
+  background-image: linear-gradient(to bottom right, #fcffe6, #feffe6);
   padding: 50px 0;
   margin: 0 auto;
   margin-bottom: 30px;
@@ -19,4 +28,10 @@
   font-size: 48px;
   margin-left: 30px;
   margin-bottom: 20px;
+}
+
+.info{
+  border-radius: 20px;
+  width: 95%;
+  margin: 0 auto;
 }
