icon display fixed
icon disappear fixed
picture disappear fixed
background refined

--- a/src/pages/mystar/mystar.less
+++ b/src/pages/mystar/mystar.less
@@ -1,5 +1,6 @@
 .bg {
-  min-height: 1300px;
+  width: 100vw;
+  min-height: 100vh;
   // background-image: linear-gradient(to bottom right, #52c41a, rgb(62, 227, 189), #bae637);
   padding-top: 10px;
   padding-bottom: 20px;
