--- a/src/pages/orderdetail/orderdetail.less
+++ b/src/pages/orderdetail/orderdetail.less
@@ -1,6 +1,7 @@
 .bg {
-  min-height: 1300px;
-  background-image: linear-gradient(to bottom right, #52c41a, rgb(62, 227, 189), #bae637);
+  width: 100vw;
+  background-image: url(https://labeler.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
+  background-repeat: repeat;
   padding-top: 10px;
   padding-bottom: 20px;
 }
