--- a/src/pages/usercenter/usercenter.less
+++ b/src/pages/usercenter/usercenter.less
@@ -52,8 +52,8 @@
 
 .icon1 {
   margin: 0 auto;
-  max-width: 64px;
-  max-height: 64px;
+  width: 64px;
+  height: 64px;
 }
 
 .container1 {
@@ -72,7 +72,8 @@
 
 
 .bg {
-  height: 1100px;
   // background-image: linear-gradient(to bottom right, #52c41a, rgb(62, 227, 189), #bae637);
   background-image: url(https://labeler.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
+  width: 100vw;
+  height: 100vh;
 }
