--- a/src/pages/allorder/allorder.less
+++ b/src/pages/allorder/allorder.less
@@ -1,5 +1,5 @@
 .bg {
-  min-height: 1300px;
+  width: 100vw;
   // background-image: linear-gradient(to bottom right, #52c41a, rgb(62, 227, 189), #bae637);
   padding-top: 10px;
   padding-bottom: 20px;
@@ -16,7 +16,7 @@
   margin: 10px 10px;
 }
 
-.bookpic{
+.bookpic {
   grid-row: 1/2;
   grid-column: 1/2;
   width: 180px;
@@ -26,12 +26,12 @@
   justify-self: center;
 }
 
-.bookinfo{
+.bookinfo {
   grid-row: 1/2;
   grid-column: 2/3;
 }
 
-.booktitle{
+.booktitle {
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
@@ -44,13 +44,13 @@
   font-weight: bold;
 }
 
-.arrow{
+.arrow {
   margin-top: 10px;
   margin-right: 10px;
   float: right;
 }
 
-.price{
+.price {
   margin-right: 60px;
   margin-top: 30px;
   text-align: right;
@@ -58,24 +58,24 @@
   color: #fa541c;
 }
 
-.priceint{
+.priceint {
   font-size: large;
   font-weight: bold;
 }
 
-.pricedecimal{
+.pricedecimal {
   font-size: small;
 }
 
-.btn{
+.btn {
   width: 5.5em;
 }
 
-.finish{
+.finish {
   color: gray;
 }
 
-.btncontainer{
+.btncontainer {
   float: right;
   margin-right: 20px;
   display: grid;
