--- a/src/style/font/iconfont.less
+++ b/src/style/font/iconfont.less
@@ -3,9 +3,9 @@
   /* Project id 3204844 */
   /* Color fonts */
   src:
-    url('iconfont.woff2?t=1645878312960') format('woff2'),
-    url('iconfont.woff?t=1645878312960') format('woff'),
-    url('iconfont.ttf?t=1645878312960') format('truetype');
+    url('iconfont.woff2?t=1646304683603') format('woff2'),
+    url('iconfont.woff?t=1646304683603') format('woff'),
+    url('iconfont.ttf?t=1646304683603') format('truetype');
 }
 
 .icon {
@@ -14,6 +14,30 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-zhuanye-:before {
+  content: "\e60a";
+}
+
+.icon-zhuanye:before {
+  content: "\e601";
+}
+
+.icon-zhuanye1:before {
+  content: "\e616";
+}
+
+.icon-zhuanye2:before {
+  content: "\e6bb";
+}
+
+.icon-jiliangzhuanye:before {
+  content: "\e605";
+}
+
+.icon-weizhi-xianxing:before {
+  content: "\e8fe";
 }
 
 .icon-shuben-:before {
