--- a/src/app.scss
+++ b/src/app.scss
@@ -24,9 +24,9 @@ $color-brand: #C6100D;
 @import "~taro-ui/dist/style/components/divider.scss";
 @import "~taro-ui/dist/style/components/steps.scss";
 @import "~taro-ui/dist/style/components/message.scss";
+@import "~taro-ui/dist/style/components/drawer.scss";
 
 // 使用heightFix防止图片出现闪屏
 Image {
   width: auto;
-  height: 100%;
 }
