feat: 首页、购物车前后端接口联调

--- a/src/pages/cart/index.less
+++ b/src/pages/cart/index.less
@@ -17,8 +17,13 @@ page {
   }
 
   .manageArea {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     background-color: #ffffff;
     font-size: 34px;
+    z-index: 100;
 
     .manageText {
       display: block;
@@ -28,6 +33,8 @@ page {
   }
 
   .itemList {
+    margin-top: 84px;
+    padding-bottom: 114px;
 
     .item {
       display: flex;
@@ -103,6 +110,7 @@ page {
     right: 0;
     padding-left: 20px;
     background-color: #ffffff;
+    z-index: 100;
 
     .iconBg {
       display: flex;
