--- a/src/style/font/iconfont.less
+++ b/src/style/font/iconfont.less
@@ -3,9 +3,9 @@
   /* Project id 3204844 */
   /* Color fonts */
   src:
-    url('iconfont.woff2?t=1646304683603') format('woff2'),
-    url('iconfont.woff?t=1646304683603') format('woff'),
-    url('iconfont.ttf?t=1646304683603') format('truetype');
+    url('iconfont.woff2?t=1646713416619') format('woff2'),
+    url('iconfont.woff?t=1646713416619') format('woff'),
+    url('iconfont.ttf?t=1646713416619') format('truetype');
 }
 
 .icon {
@@ -16,24 +16,40 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-zhuanye-:before {
+.icon-shuji1:before {
+  content: "\e601";
+}
+
+.icon-shuji-copy:before {
+  content: "\e602";
+}
+
+.icon-shuji2:before {
+  content: "\e603";
+}
+
+.icon-shujijiaocai-copy:before {
+  content: "\e605";
+}
+
+.icon-shijuan:before {
   content: "\e60a";
 }
 
-.icon-zhuanye:before {
-  content: "\e601";
+.icon-shuji:before {
+  content: "\e6be";
+}
+
+.icon-zhuanyeshuji:before {
+  content: "\e777";
+}
+
+.icon-book-01:before {
+  content: "\e734";
 }
 
 .icon-zhuanye1:before {
   content: "\e616";
-}
-
-.icon-zhuanye2:before {
-  content: "\e6bb";
-}
-
-.icon-jiliangzhuanye:before {
-  content: "\e605";
 }
 
 .icon-weizhi-xianxing:before {
