--- a/src/pages/bookDetail/index.less
+++ b/src/pages/bookDetail/index.less
@@ -27,7 +27,6 @@ page {
 
     .priceMessage {
       display: flex;
-      position: relative;
       margin: 20px 0;
 
       .presentPrice {
@@ -36,9 +35,8 @@ page {
       }
 
       .originalPrice {
-        position: absolute;
-        left: 80px;
-        bottom: 0;
+        margin-top: 10px;
+        margin-left: 10px;
         text-decoration: line-through;
       }
     }
