--- a/src/pages/bookList/index.less
+++ b/src/pages/bookList/index.less
@@ -3,6 +3,7 @@ page {
 }
 
 .publicBookPage {
+  height: 100vh;
 
   .header {
     position: fixed;
@@ -16,11 +17,11 @@ page {
       display: flex;
       height: 80px;
       line-height: 80px;
-      padding: 0 100px;
+      padding: 0 200px;
       justify-content: space-between;
 
       .active {
-        color: darkorange;
+        color: #52c41a;
       }
 
       .sortOfPrice {
@@ -32,11 +33,11 @@ page {
           margin: 15px 0 0 10px;
 
           .active-up {
-            color: darkorange;
+            color: #52c41a;
           }
 
           .active-down {
-            color: darkorange;
+            color: #52c41a;
           }
 
         }
@@ -76,23 +77,22 @@ page {
           .bookName {
             font-size: 35px;
             font-weight: bold;
+            width: 450px;
           }
 
           .priceMessage {
             display: flex;
+            position: absolute;
             bottom: 0;
 
             .presentPrice {
-              position: absolute;
-              bottom: 20px;
               font-size: 40px;
               color: red;
             }
 
             .originalPrice {
-              position: absolute;
-              bottom: 20px;
-              left: 80px;
+              margin-left: 20px;
+              margin-top: 16px;
               text-decoration: line-through;
             }
           }
@@ -116,5 +116,26 @@ page {
       }
     }
 
+  }
+
+  .activityIndicator {
+    display: flex;
+    justify-content: center;
+  }
+
+  .divider {
+    height: 0;
+    margin-bottom: 60px;
+  }
+
+  .at-divider__content {
+    background-color: #f2f2f2;
+    z-index: 2;
+  }
+
+  .at-divider__line {
+    width: 350px;
+    margin-left: 200px;
+    z-index: 1;
   }
 }
