--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -52,6 +52,7 @@ page {
         background-color: #f2f2f2;
         font-size: 34px;
         text-align: center;
+        color: #52c41a;
       }
     }
 
@@ -61,9 +62,18 @@ page {
       overflow: auto;
 
       .publishBookArea {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 400px;
         padding: 20px;
         background-color: #ffffff;
         border-radius: 32px;
+        text-align: center;
+
+        .publishBookText {
+          margin-top: 20px;
+        }
       }
 
       .academyItem {
