--- a/src/pages/purchase/index.less
+++ b/src/pages/purchase/index.less
@@ -5,7 +5,7 @@ page {
 .purchasePage {
 
   .content {
-    padding: 30px 40px;
+    padding: 30px 40px 130px 40px;
 
     .addressArea {
       display: flex;
@@ -50,7 +50,6 @@ page {
 
     .orderMessage {
       padding: 20px;
-      margin-top: 30px;
       border-radius: 20px;
       background-color: #ffffff;
 
@@ -85,14 +84,15 @@ page {
 
             .bookName {
               margin-left: 20px;
+              width: 360px;
             }
           }
 
           .quantity {
             position: absolute;
             right: 0;
-            margin-top: 40px;
-            color: black;
+            bottom: 30px;
+            color: #9D9D9D;
           }
         }
       }
