feat:首页、购物车接口联调

--- a/src/pages/search/index.less
+++ b/src/pages/search/index.less
@@ -1,5 +1,26 @@
+page {
+  background-color: #f2f2f2;
+}
+
 .searchPage {
   .searchBar {
+    background-color: #f2f2f2;
+  }
+
+  .at-search-bar__input-cnt {
     background-color: #ffffff;
+  }
+
+  .searchedName {
+    height: 85vh;
+    margin-top: 10px;
+    padding: 30px;
+    border-radius: 30px;
+    background-color: #ffffff;
+
+    .bookNameItem {
+      padding: 20px;
+      border-bottom: 1px solid #e2e1e1;
+    }
   }
 }
