--- a/src/pages/usercenter/usercenter.less
+++ b/src/pages/usercenter/usercenter.less
@@ -1,20 +1,12 @@
-.gridshow {
-  display: grid;
-  grid-template-rows: 250px 180px;
-  grid-template-columns: auto auto auto auto;
-  gap: 100px;
-  padding: 10px;
-  align-items: center;
-}
-
 .username {
+  flex: 0 0 70%;
   text-align: left;
   margin-left: 100px;
   font-size: 48px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.line{
+.line {
   padding: 0px;
   border-style: solid;
   width: 70%;
@@ -22,12 +14,13 @@
   border-width: 1px;
 }
 
-.school{
+.school {
   color: gray;
   font-size: 32px;
 }
 
 .avatar {
+  flex: 0 0 25%;
   border-radius: 50%;
   max-width: 128px;
   max-height: 128px;
@@ -35,13 +28,9 @@
 }
 
 .container0 {
+  display: flex;
   margin-top: 10px;
-  display: grid;
-  grid-template-rows: 150px;
-  grid-template-columns: 130px auto;
   width: 100%;
-  grid-row: 1/2;
-  grid-column: 1/5;
   border-style: none;
   border-radius: 20px;
   padding: 50px 0;
@@ -56,22 +45,46 @@
   height: 64px;
 }
 
+// .container1 {
+//   display: grid;
+//   grid-template-rows: 120px 120px;
+//   grid-template-columns: auto auto auto auto;
+//   grid-column: 1/5;
+//   border-radius: 20px;
+//   gap: 40px;
+//   width: 100%;
+//   font-size: 28px;
+//   text-align: center;
+//   background-color: white;
+//   padding: 32px 0;
+// }
+
 .container1 {
-  display: grid;
-  grid-template-rows: 120px 120px;
-  grid-template-columns: auto auto auto auto;
-  grid-column: 1/5;
-  border-radius: 20px;
-  gap: 40px;
   width: 100%;
-  font-size: 28px;
+  margin-top: 10px;
+  border-radius: 20px;
   text-align: center;
   background-color: white;
-  padding: 32px 0;
+
+  display: flex;
+  justify-content: space-around;
+  flex-flow: row wrap;
+  align-content: flex-start;
+
+  View {
+    flex: 0 0 33.33%;
+    margin: 32px 0;
+  }
+
+  .order {
+    flex: 0 0 50%;
+  }
+
 }
 
 
 .bg {
+  overflow: hidden;
   // background-image: linear-gradient(to bottom right, #52c41a, rgb(62, 227, 189), #bae637);
   background-image: url(https://labeler.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
   width: 100vw;
