order page restructuring

--- a/src/pages/usercenter/usercenter.less
+++ b/src/pages/usercenter/usercenter.less
@@ -60,6 +60,7 @@
 // }
 
 .container1 {
+  padding-top: 20px;
   width: 100%;
   margin-top: 10px;
   border-radius: 20px;
@@ -74,10 +75,6 @@
   View {
     flex: 0 0 33.33%;
     margin: 32px 0;
-  }
-
-  .order {
-    flex: 0 0 50%;
   }
 
 }
