--- a/src/pages/usercenter/usercenter.less
+++ b/src/pages/usercenter/usercenter.less
@@ -1,7 +1,7 @@
 .username {
   flex: 0 0 70%;
   text-align: left;
-  margin-left: 100px;
+  margin-left: 1em;
   font-size: 48px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
@@ -22,9 +22,9 @@
 .avatar {
   flex: 0 0 25%;
   border-radius: 50%;
-  max-width: 128px;
-  max-height: 128px;
-  margin-left: 30px;
+  max-width: 4em;
+  max-height: 4em;
+  margin-left: 2em;
 }
 
 .container0 {
