--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -1,5 +1,7 @@
 page {
-  background-color: #f2f2f2;
+  // background-color: #f2f2f2;
+  background-image: linear-gradient(to bottom right, #b7eb8f, #73d13d, #87e8de);
+
 }
 
 .professionalBookPage {
@@ -32,7 +34,8 @@ page {
 
     .sidebar {
       width: 190px;
-      background-color: #ffffff;
+      // background-color: #ffffff;
+      background-image: linear-gradient(to bottom right, #237804, #006d75);
       overflow: auto;
 
       .bookTypeItem {
@@ -41,7 +44,9 @@ page {
         align-items: center;
         height: 150px;
         text-align: center;
-        background-color: #ffffff;
+        color: white;
+        // background-color: #ffffff;
+
       }
 
       .bookTypeItemActive {
@@ -49,10 +54,12 @@ page {
         justify-content: center;
         align-items: center;
         height: 150px;
-        background-color: #f2f2f2;
-        font-size: 34px;
+
+        font-size: 32px;
         text-align: center;
-        color: #52c41a;
+        color: white;
+
+        animation: selected 0.5s ease forwards;
       }
     }
 
@@ -129,4 +136,16 @@ page {
 // 设置滚动条不显示
 ::-webkit-scrollbar {
   display: none
+}
+
+@keyframes selected {
+  0% {
+    box-shadow: 0 0 0 0 white;
+    border-radius: 0;
+  }
+
+  100% {
+    border-radius: 5px;
+    box-shadow: 0 0 10px 0px white;
+  }
 }
