--- a/src/pages/order/order.less
+++ b/src/pages/order/order.less
@@ -4,14 +4,15 @@
   // background-image: linear-gradient(to bottom right, #52c41a, rgb(62, 227, 189), #bae637);
   padding-bottom: 20px;
   padding-top: 70px;
-  background-image: url(https://labeler.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
-  background-repeat: repeat-y;
+  // background-image: url(https://labeler.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
+  // background-repeat: repeat-y;
+  background-image: linear-gradient(to bottom right, #b7eb8f, #73d13d, #87e8de);
 }
 
 .nav {
   position: fixed;
   top: 0;
-  background-color: white;
+  background-image: linear-gradient(to bottom right, #237804, #006d75);
   width: 100%;
   height: 64px;
   z-index: 10;
@@ -24,12 +25,34 @@
   width: 33.33%;
   height: 64px;
   line-height: 64px;
-  background-color: #fafafa;
+  color: white;
 }
 
 .navSelected{
   font-size:30px;
-  color: #52c41a;
+  animation: selected 0.5s ease forwards;
 }
 
+@keyframes selected {
+  0% {
+    font-size: small;
+  }
 
+  100% {
+    font-size:30px;
+  }
+}
+
+.emptyCart {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 200px auto;
+  width: 9em;
+  height: 9em;
+  background-color: white;
+  color: black;
+  border-radius: 0.5em;
+  box-shadow: 0 0 2em 0.5em #237804;
+}
