order pages and throttle

--- a/src/pages/order/order.less
+++ b/src/pages/order/order.less
@@ -1,12 +1,17 @@
-.bg {
-  width: 100vw;
-  min-height: 100vh;
+page {
   // background-image: linear-gradient(to bottom right, #52c41a, rgb(62, 227, 189), #bae637);
-  padding-bottom: 20px;
-  padding-top: 70px;
   // background-image: url(https://labeler.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
   // background-repeat: repeat-y;
   background-image: linear-gradient(to bottom right, #b7eb8f, #73d13d, #87e8de);
+  background-attachment: fixed;
+  padding-bottom: 20px;
+  padding-top: 70px;
+
+  .activityIndicator {
+    display: flex;
+    justify-content: center;
+    color: white;
+  }
 }
 
 .nav {
