--- a/src/pages/bookList/index.less
+++ b/src/pages/bookList/index.less
@@ -58,13 +58,14 @@ page {
         display: flex;
 
         .imageWrapper {
-          width: 240px;
-          height: 240px;
+          width: 260px;
+          height: 260px;
           font-size: 0;
           text-align: center;
+          overflow: hidden;
 
           .bookImage {
-            height: 240px;
+            height: 260px;
           }
         }
 
