--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -68,7 +68,7 @@ page {
       padding: 30px 20px;
       overflow: auto;
 
-      .publishBookArea {
+      .bookArea {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -78,7 +78,7 @@ page {
         border-radius: 32px;
         text-align: center;
 
-        .publishBookText {
+        .bookText {
           margin-top: 20px;
         }
       }
