--- a/src/pages/cart/index.less
+++ b/src/pages/cart/index.less
@@ -69,6 +69,7 @@ page {
           height: 180px;
           text-align: center;
           font-size: 0;
+          overflow: hidden;
 
           .bookImage {
             height: 180px;
