fixed:重建登录模块

--- a/src/pages/usercenter/usercenter.less
+++ b/src/pages/usercenter/usercenter.less
@@ -8,12 +8,14 @@
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.line {
-  padding: 0px;
-  border-style: solid;
-  width: 70%;
-  border-color: white;
-  border-width: 1px;
+.username_login {
+  flex: 0 0 70%;
+  text-align: left;
+  color: white;
+  margin-left: 1em;
+  font-size: 37px;
+  letter-spacing: 3px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .school {
