--- a/src/pages/cart/index.less
+++ b/src/pages/cart/index.less
@@ -99,6 +99,13 @@ page {
         bottom: 20px;
         right: 20px;
       }
+
+      .noquantity {
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+        color: #C6100D;
+      }
     }
   }
 
