order interface changed and pay bug fixed

--- a/src/pages/orderdetail/orderdetail.less
+++ b/src/pages/orderdetail/orderdetail.less
@@ -1,7 +1,12 @@
+.at-list__item .item-content__info-title {
+  white-space: unset;
+  font-size: 0.8rem;
+}
+
 .bg {
-  width: 100vw;
   background-image: url(https://labeler.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
-  background-repeat: repeat;
+  width: 100vw;
+  height: 100vh;
   padding-top: 10px;
   padding-bottom: 20px;
 }
@@ -16,10 +21,9 @@
 }
 
 .price {
-  margin-right: 60px;
-  margin-top: 30px;
+  margin-top: 2%;
   text-align: right;
-  margin-bottom: 10px;
+  float: right;
   color: #fa541c;
 }
 
@@ -40,8 +44,9 @@
 
 .booktitle{
   font-weight: bold;
-  width: 90%;
-  margin: 30px auto;
+  display: inline-block;
+  margin-left: 1%;
+  margin-top: 2%;
 }
 
 .list{
