fixed:图片存储更改

--- a/src/pages/changeUserInfo/changeUserInfo.less
+++ b/src/pages/changeUserInfo/changeUserInfo.less
@@ -4,7 +4,7 @@
   // background-image: linear-gradient(to bottom right, #52c41a, rgb(62, 227, 189), #bae637);
   padding-top: 10px;
   padding-bottom: 20px;
-  background-image: url(https://labeler.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
+  background-image: url(https://greenbookstore.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
   // background-image: linear-gradient(to bottom right, #389e0d, #73d13d, #00474f);
   background-repeat: repeat-y;
 }
