--- a/src/pages/order/order.less
+++ b/src/pages/order/order.less
@@ -1,6 +1,6 @@
 page {
   // background-image: linear-gradient(to bottom right, #52c41a, rgb(62, 227, 189), #bae637);
-  // background-image: url(https://labeler.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
+  // background-image: url(https://greenbookstore.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
   // background-repeat: repeat-y;
   background-image: linear-gradient(to bottom right, #b7eb8f, #73d13d, #87e8de);
   background-attachment: fixed;
