--- a/src/pages/orderdetail/orderdetail.less
+++ b/src/pages/orderdetail/orderdetail.less
@@ -4,7 +4,7 @@
 }
 
 .bg {
-  background-image: url(https://labeler.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
+  background-image: url(https://greenbookstore.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
   width: 100vw;
   height: 100vh;
   padding-top: 10px;
