--- a/src/pages/usercenter/usercenter.less
+++ b/src/pages/usercenter/usercenter.less
@@ -94,7 +94,7 @@
 .bg {
   overflow: hidden;
   // background-image: linear-gradient(to bottom right, #52c41a, rgb(62, 227, 189), #bae637);
-  // background-image: url(https://labeler.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
+  // background-image: url(https://greenbookstore.oss-cn-hangzhou.aliyuncs.com/img/bg.png);
   background-image: linear-gradient(to bottom right, #b7eb8f, #73d13d, #87e8de);
  
   width: 100vw;
