pay,order,scroll bug fixed

--- a/src/pages/order/order.less
+++ b/src/pages/order/order.less
@@ -14,6 +14,16 @@ page {
   }
 }
 
+.at-divider__line {
+  background-color: green !important;
+  height: 2PX;
+}
+
+.at-divider__content {
+  background-color: green !important;
+  color: white !important;
+}
+
 .nav {
   position: fixed;
   top: 0;
@@ -36,6 +46,10 @@ page {
 .navSelected{
   font-size:30px;
   animation: selected 0.5s ease forwards;
+}
+
+.scroll{
+  height: 100vh;
 }
 
 @keyframes selected {
