--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -8,17 +8,21 @@ page {
 
   .header {
     display: flex;
-    align-items: center;
     background-color: #ffffff;
-    padding: 20px 10px;
 
-    .selectSchool {
-      margin-left: 20px;
+    .location {
+      width: 45vw;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .icon-right {
+        margin-top: 5px;
+      }
     }
-
-    .icon-right {
-      margin-left: 40px;
-      margin-top: 5px;
+    
+    .searchArea {
+      width: 55vw;
     }
   }
 
